# lolila

./: .gitignore  README.md
android/demo/: settings.gradle
android/demo/app/: build.gradle
android/demo/app/src/main/: AndroidManifest.xml
android/opengles_sample/app/: CMakeLists.txt  build.gradle
android/opengles_sample/app/src/main/: AndroidManifest.xml
android/sdk/: settings.gradle
android/sdk/lolila_sdk/: CMakeLists.txt  build.gradle
android/sdk/lolila_sdk/src/androidTest/java/com/foxical/lolila/sdk/: ExampleInstrumentedTest.java
android/sdk/lolila_sdk/src/main/: AndroidManifest.xml
android/sdk/lolila_sdk/src/main/cpp/: RenderApi.cpp  SceneApi.cpp  native-lib.cpp
android/sdk/lolila_sdk/src/main/cpp/base/geometry/: Box.cpp  Box.h  BoxPlane.cpp  BoxPlane.h  Line.cpp  Line.h  LineDistance.cpp  LineDistance.h  Plane.cpp  Plane.h  PlaneIntersection.cpp  PlaneIntersection.h  Projections.cpp  Projections.h  Ray.cpp  Ray.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h  ViewFrustum.cpp  ViewFrustum.h
android/sdk/lolila_sdk/src/main/cpp/base/math/: DoubleOutputAdapter.hpp  FloatOutputAdapter.hpp  Fraction.cpp  Fraction.h  FractionOutputAdapter.hpp  GeneralVector.cpp  GeneralVector.h  Matrix.cpp  Matrix.h  TMatrix.cpp  TMatrix.hpp  Vector.cpp  Vector.h
android/sdk/lolila_sdk/src/main/cpp/base/transforms/: Camera.cpp  Camera.h  Camera2.cpp  Camera2.h  HomogeneousCoordinate.cpp  HomogeneousCoordinate.h  MVPTransform.cpp  MVPTransform.h  MultiTransform.cpp  MultiTransform.h  Rotation.cpp  Rotation.h  Scaling.cpp  Scaling.h  Translate.cpp  Translate.h
android/sdk/lolila_sdk/src/main/cpp/base/utils/: AndroidLog.h  FloatUtils.cpp  FloatUtils.h  GLUtils.cpp  GLUtils.h  LinearlyIndependent.cpp  LinearlyIndependent.h  LogQueue.cpp  LogQueue.h  Simple2DTexture.cpp  Simple2DTexture.h  TemplateExportDef.h  VBOHelper.cpp  VBOHelper.h  stb_image_wrap.cpp
android/sdk/lolila_sdk/src/main/cpp/course/: AbstractCourse.h  Course1.cpp  Course1.h  Course2.cpp  Course2.h  Course3.cpp  Course3.h  Course4.cpp  Course4.h  Course5.cpp  Course5.h  Course6.cpp  Course6.h  CourseFactory.cpp  CourseFactory.h  DrawingContext.h  TestCourse.cpp  TestCourse.h
android/sdk/lolila_sdk/src/main/cpp/shaders/: ShaderProgram.h  SimpleShader.cpp  SimpleShader.h  SimpleVAO.cpp  SimpleVAO.h  SimpleVertexSet.cpp  SimpleVertexSet.h  VertexSetTransform.cpp  VertexSetTransform.h
android/sdk/lolila_sdk/src/main/cpp/shapes/: AbstractShapeVertex.cpp  AbstractShapeVertex.h  AbstractVAO.cpp  AbstractVAO.h  HollowCube.cpp  HollowCube.h  HollowTriangle.cpp  HollowTriangle.h  LineVertex.h  SemiCircle.cpp  SemiCircle.h  ShaderProgram.cpp  ShaderProgram.h  Simple3DCoordinate.cpp  Simple3DCoordinate.h  SimpleAxis.cpp  SimpleAxis.h  SimpleLine.cpp  SimpleLine.h  SimplePlane.cpp  SimplePlane.h  SimpleShader.cpp  SimpleShader.h  SimpleTriangle.cpp  SimpleTriangle.h  SimpleVAO.cpp  SimpleVAO.h  SymbleC.cpp  SymbleC.h  SymbleM.cpp  SymbleM.h  SymbleN.cpp  SymbleN.h  SymbleO.cpp  SymbleO.h
android/sdk/lolila_sdk/src/main/java/com/foxical/lolila/sdk/: IndexApi.java  RenderApi.java  SceneApi.java
android/sdk/lolila_sdk/src/main/res/values/: strings.xml
android/sdk/lolila_sdk/src/test/java/com/foxical/lolila/sdk/: ExampleUnitTest.java
doc/: how to use glm.txt
doc/misc/: GL_header_not found.txt  How_to_create_library_project_with_cpp_support.txt  eglCreateContenxt_return_null.txt  libGLESv3_not _found.txt
doc/misc/guide_to_create_a_sample_native_activity/: Configuring Android Studio for Native (C_C++) Development with Java Support _ Raging Gazebo.html
doc/repo/: github_address.txt
(+26 files in other folders)
